tests/ui/const-generics/fn_with_two_const_inputs.stderr
error: unconstrained generic constant
  --> $DIR/fn_with_two_const_inputs.rs:12:5
   |
LL |     bar()
   |     ^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); N + 1]:`
note: required by a bound in `bar`
  --> $DIR/fn_with_two_const_inputs.rs:18:10
   |
LL | fn bar<const N: usize>() -> [(); N]
   |    --- required by a bound in this function
LL | where
LL |     [(); N + 1]:,
   |          ^^^^^ required by this bound in `bar`

error: aborting due to previous error

